# IoT

smart-parking-k3d/: README.md  build_deploy_all.cmd
smart-parking-k3d/k8s/: rbac-signage-mobile.yaml
smart-parking-k3d/k8s/crds/: parkinglot-crd.yaml  parkingspace-crd.yaml
smart-parking-k3d/k8s/mosquitto/: configmap.yaml  deployment.yaml  service.yaml
smart-parking-k3d/k8s/tls/: tls-secrets.yaml
smart-parking-k3d/services/aggregator/: Dockerfile  deployment.yaml  main.py  requirements.txt
smart-parking-k3d/services/mobile-api/: deployment.yaml  main.py  requirements.txt
smart-parking-k3d/services/sensor-simulator/: Dockerfile  deployment.yaml  main.py
smart-parking-k3d/services/signage/: Dockerfile  deployment.yaml  kube.py  main.py
smart-parking-k3d/services/signage/static/: dashboard.js  style.css
smart-parking-k3d/services/signage/templates/: index.html
smart-parking-k3d/wasm-aggregator/: Cargo.toml  kubeapi-haproxy.yaml  rbac-wasm-aggregator.yaml  spin.toml  spinapp.yaml
smart-parking-k3d/wasm-aggregator/src/: lib.rs
